--- a/index.html
+++ b/index.html
@@ -2007,7 +2007,7 @@ nav {
             <!-- Member 1 -->
             <div class="team-member">
                 <div class="member-img">
-                    <img src="./images/1n.JPG" alt="1n">
+                    <img src="./images/1n.jpg" alt="1n">
                 </div>
                 <h3 class="member-name">Zeeshan Ali</h3>
                 <p class="member-role">Founder & Executive Chef</p>
@@ -2053,7 +2053,7 @@ nav {
             <!-- Member 3 -->
             <div class="team-member">
                 <div class="member-img">
-                    <img src="./images/3n.JPG" alt="3n">
+                    <img src="./images/3n.jpg" alt="3n">
                 </div>
                 <h3 class="member-name">Hamza Rasheed</h3>
                 <p class="member-role">Food Scientist</p>
